# python-project-52

./: .env  .env.sample  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
fixtures/: labels.json  one_task.json  statuses.json  task_form_data.json  tasks.json  user_form_data.json  users.json
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_remove_label_description_alter_label_name.py
labels/templates/labels/: delete.html  list_of_labels.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
statuses/templates/statuses/: delete.html  edit.html  (+1 more)
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  edit.html  home_page.html  login.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_assignee_alter_task_creator_and_more.py  0003_alter_task_assignee_alter_task_creator_and_more.py  0004_alter_task_label.py  0005_alter_task_label.py  0006_alter_task_assignee_alter_task_label.py  0007_alter_task_assignee.py  0008_remove_task_assignee_task_executor_alter_task_name.py  0009_rename_label_task_labels.py  0010_alter_task_executor.py  0011_alter_task_executor.py
users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_created_at.py  0003_remove_user_created_at.py
(+10 files in other folders)
